fixed CSS and nav collapse

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -1,32 +1,47 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
- html, html * {
-     font-family: Roboto;
-     /* background-color: #424649; */
-}
-nav > h1 {
-  color: #FFFFFF;
-}
- body {
-     background-color:#424649;
-}
- body > h1, h2, h3, h4, h5, h6, strong {
-     color:#FFFFFF;
-}
- html > body {
-     color:#8f9093;
-}
+@import url(https://fonts.googleapis.com/css2?family=Contrail+One&family=Mallanna&display=swap);
 
+html * {
+  font-family: 'Mallanna', sans-serif;
+  /* background-color: #424649; */
+}
+body {
+  background-color: #424649;
+}
+body > h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+  color: #ffffff;
+}
+html > body {
+  color: #dcdcdd;
+  font-size: larger;
+}
+header h1 {
+  margin-left: 10px;
+  color: #339989;
+  size: x-large;
+}
 .navList {
   font-weight: bolder;
 }
 
 .nav-link {
-  color: white;
+  color: #339989;
 }
 .nav-link:hover {
   color: #8f9093;
 }
 
+.navbar-brand {
+  margin-bottom: 0;
+  font-family: 'Contrail One', cursive;
+  font-size: xx-large;
+  color: white;
+}
 .modal-content {
   background-color: #424649;
 }
@@ -35,9 +50,19 @@ nav > h1 {
   width: 50%;
   margin-left: 25%;
   align-self: center;
-  padding-left: 5px; 
+  padding-left: 5px;
+  margin-bottom: 1%;
+  -webkit-box-shadow: 5px 5px 15px 4px #0f0f0f;
+  box-shadow: 5px 5px 15px 4px #0f0f0f;
+}
+.card-header h3{
+  color: #339989;
+}
+.card-text {
+  padding-left: 5px;
 }
 
 article {
   padding-bottom: 10px;
 }
+
